# logxx

./: CMakeLists.txt  README.md
main/: log.cpp  log.h  log.tcc  logxx.cpp  logxx.tcc
test/: CMakeLists.txt  main.cpp  test_log.cpp  test_log.h
test/data/: global.etalon  inheritLevel.etalon  local.etalon  redirect.etalon
